create github pages

--- a/page3.html
+++ b/page3.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="step1 cid-rVbFbW6wpR mbr-parallax-background" id="step1-w">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="step1 cid-rVbFbW6wpR mbr-parallax-background" id="step1-w">
 
     
 
