create github pages

--- a/page4.html
+++ b/page4.html
@@ -48,13 +48,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html#header2-1n">ACRISTALIA</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">ACRISTALIA</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-s0LrxitmCS mbr-fullscreen mbr-parallax-background" id="header2-1n">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="cid-s0LrxitmCS mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=36YgDDJ7XSc" id="header2-1n">
 
     
 
@@ -68,7 +68,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Le ayudamos a crear espacios para disfrutar completamente de su terraza elevando la plusvalía de su inversión.
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page4.html#contacts3-1s">Contáctenos</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page4.html#contacts3-1s">Contáctenos</a> 
                     <a class="btn btn-md btn-white-outline display-4" href="page4.html#gallery3-1t">Galería</a></div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                         <div class="step-text-content">
                             <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Contáctenos&nbsp;</h4>
                             <p class="mbr-step-text mbr-fonts-style display-7">
-                                Coordinaremos al +569 99957378 para una visita con un decorador que lo asesorará y le entregará un presupuesto al instante.
+                                Coordinaremos al +569 999 573 78 para una visita con un decorador que lo asesorará y le entregará un presupuesto al instante.
                             </p>
                         </div>
                     </div>
@@ -183,9 +183,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-1">Fabricación</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Tejida y anudada con nudo cerrado, que no abre en caso de corte. Permite una visión limpia del paisaje.
-                        </p>
+                        <p class="mbr-text mbr-fonts-style display-7">Únicos fabricantes en la región.</p>
                     </div>
                 </div>
             </div>
@@ -336,18 +334,18 @@
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/masonry/masonry.pkgd.min.js"></script>
   <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/slidervideo/script.js"></script>
   <script src="assets/gallery/player.min.js"></script>
   <script src="assets/gallery/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
