--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html#header2-1n">ACRISTALIA</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">ACRISTALIA</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="cid-rV6nuXcqyp mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="cid-rV6nuXcqyp mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -133,6 +133,5 @@
   
   <script src="modificaciones.js"></script>
 
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
