--- a/page1.html
+++ b/page1.html
@@ -46,13 +46,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page4.html#header2-1n">ACRISTALIA</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html#step1-d">ROLLER INTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page2.html#step1-s">ROLLER EXTERIOR</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">LAVADO</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html#step1-w">MALLAS DE PROTECCIÓN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#">ACRISTALIA</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="step1 cid-rV81wR0QyG mbr-parallax-background" id="step1-d">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="step1 cid-rV81wR0QyG mbr-parallax-background" id="step1-d">
 
     
 
@@ -277,6 +277,5 @@
   <script src="assets/theme/js/script.js"></script>
   
   
- <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+</body>
 </html>
