create github pages

--- a/page1.html
+++ b/page1.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="step1 cid-rV81wR0QyG mbr-parallax-background" id="step1-d">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="step1 cid-rV81wR0QyG mbr-parallax-background" id="step1-d">
 
     
 
