--- a/page2.html
+++ b/page2.html
@@ -52,7 +52,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="step1 cid-rVbF7xMme8 mbr-parallax-background" id="step1-s">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="step1 cid-rVbF7xMme8 mbr-parallax-background" id="step1-s">
 
     
 
